# UV Package Management Configuration
# Conda creates venv + system deps, UV manages Python packages

[project]
name = "ml-system-deps"
version = "1.0.0"
description = "ML project with Conda system dependencies and UV package management"
requires-python = ">=3.11"

# Python packages managed by UV
# These will be installed into Conda's virtual environment
dependencies = [
    # Deep Learning Framework (uses Conda's CUDA)
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",

    # Scientific Computing (uses Conda's MKL)
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",

    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",

    # Data Processing (uses Conda's HDF5)
    "h5py>=3.10.0",
    "tables>=3.9.0",

    # Image Processing (uses Conda's libpng, libjpeg)
    "pillow>=10.1.0",
    "opencv-python>=4.8.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # Utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Optional ML frameworks
transformers = [
    "transformers>=4.35.0",
    "tokenizers>=0.15.0",
    "datasets>=2.15.0",
]

# Optional visualization
viz = [
    "plotly>=5.18.0",
    "bokeh>=3.3.0",
]

# Optional data formats
data = [
    "pyarrow>=14.0.0",
    "polars>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ruff>=0.1.7",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov"